Approved familty sinhala N english

--- a/Frontend/src/assets/i18n/en.json
+++ b/Frontend/src/assets/i18n/en.json
@@ -3,5 +3,43 @@
   "clinic.upcoming_clinics": "Upcoming Clinics",
   "clinic.schedule_a_clinic":"Schedule a Clinic",
   "clinic.enter_clinic_data":"Enter Clinic Data",
-  "family.view_approved_families_of_the_area":"View Approved Families of the Area"
+  "family.view_approved_families_of_the_area":"View Approved Families of the Area",
+
+  "family.village_id": "Village ID",
+  "family.Approved_family_category": "Approved family category",
+  "family.Identity_number": "Identity number",
+  "family.Date": "Date",
+  "family.Name_of_wife": "Name of wife",
+  "family.Name_of_husband": "Name of husband",
+  "family.Address": "Address",
+  "family.Date_of_birth": "Birth date",
+  "family.Age_at_the_time_of_marriage": "Age at the time of marriage",
+  "family.Job_status": "Job status",
+  "family.Education_level": "Education level" ,
+  "family.Number_of_living_children": "Number of living children",
+  "family.Pregnancy_details": "Pregnancy details" ,
+  "family.Pregnancy_details__Pregnancy__First": "First",
+  "family.Pregnancy_details__Pregnancy__Second": "Second",
+  "family.Pregnancy_details__Pregnancy__Third": "Third",
+  "family.Pregnancy_details__Pregnancy__Fourth": "Fourth",
+  "family.Pregnancy_details__Pregnancy__Fifth": "Fifth",
+  "family.Pregnancy_details__Results": "Result",
+  "family.Pregnancy_details__Result__First": "First",
+  "family.Pregnancy_details__Result__Second": "Second",
+  "family.Pregnancy_details__Result__Third": "Third",
+  "family.Pregnancy_details__Result__Fourth": "Fourth",
+  "family.Pregnancy_details__Result__Fifth": "Fifth",
+  "family.Family_planning_methods": "Family planing methods",
+  "family.Family_planning_methods__First__Method": "First",
+  "family.Family_planning_methods__First__Date": "Date",
+  "family.Family_planning_methods__second__Method": "Second",
+  "family.Family_planning_methods__second__Date": "Date",
+  "family.Family_planning_methods__third__Method": "Third",
+  "family.Family_planning_methods__third__Date": "Date",
+  "family.Family_planning_methods__fourth__Method": "Fourth",
+  "family.Family_planning_methods__fourth__Date": "Date",
+  "family.Safeforrubella": "Safe for rubella",
+  "family.Dateofcervicalmucoustest": "Date of cervical mucoustest",
+  "family.Otherdetails": "Other details",
+  "family.numberofyoungchildren": "Number of young children"
 }
