mother book Sinhala and En

--- a/Frontend/src/assets/i18n/en.json
+++ b/Frontend/src/assets/i18n/en.json
@@ -43,6 +43,55 @@
   "family.Otherdetails": "Other details",
   "family.numberofyoungchildren": "Number of young children",
 
+  "mother.mother_id": "Mother's ID",
+    "mother.registration_no": "Registration Number",
+    "mother.registration_date": "Registration Date",
+    "mother.mothers_name": "Mother's Name",
+    "mother.personal_details": "Personal Details",
+    "mother.address": "Address",
+    "mother.age": "Age",
+    "mother.no_of_living_children": "No. of living Children",
+    "mother.gravidity": "Gravidity",
+    "mother.POA": "POA",
+    "mother.EDD": "EDD",
+    "mother.protection_against_tetanus": "Protection Against Tetanus",
+    "mother.protection_against_rubella": "Protection Against Rubella",
+    "mother.risk_conditions": "Risk Conditions", 
+    "mother.blood_sugar" : "Blood Sugar Level",
+    "mother.blood_sugar__during_first_twelve_weeks": "<12 weeks",
+    "mother.blood_sugar__twentyfour_fourtyeight_weeks": "24-28 weeks",
+    "mother.hemoglobin_level": "Hemoglobin Level",
+    "mother.hemoglobin_level__first_twelve_weeks": " <12",
+    "mother.hemoglobin_level__twentysix_twentyeight_weeks": "26-28",
+    "mother.blood_group": "Blood Group",
+    "mother.vdrl_test": "VDRL Tests",
+    "mother.vdrl_test__before_twelve_weeks": "Before Twelve Weeks",
+    "mother.vdrl_test__after_twelve_weeks": "After Twelve Weeks",
+    "mother.hiv_screening": "HIV Screening",
+    "mother.mothers_weight": "Mothers Weight Details",
+    "mother.mothers_weight__weight_at_first_visit": "At First Visit",
+    "mother.mothers_weight__poa_at_first_visit": "POA at First Visit",
+    "mother.mothers_weight__weight_at_last_visit": "At Last Visit",
+    "mother.mothers_weight__poa_at_last_visit": "POA at Last Visit",
+    "mother.mothers_weight__gained_weight_during_pregnancy": "Gained Weight During Pregnancy",
+    "mother.bmi_before_twelve_weeks": "BMI Before 12 Weeks",
+    "mother.delivery_informations": "Delivery Informations",
+    "mother.delivery_informations__date": "Date",
+    "mother.delivery_informations__place": "Place",
+    "mother.delivery_informations__outcome": "Outcome",
+    "mother.delivery_informations__sex": "Gender",
+    "mother.mode_of_delivery": "Mode of Delivery",
+    "mother.birth_weight": "Birth Weight",
+    "mother.postpartum_visits": "Postpartum Visits",
+    "mother.postpartum_visits__within_first_five_days": "Within First 5 Days",
+    "mother.postpartum_visits__six_to_ten_days": "Six to Ten Days",
+    "mother.postpartum_visits__late_first_visit_eleven_thirteen_days": "Late First Visit Eleven-Thirteen Days",
+    "mother.postpartum_visits__fourteen_twentyone_days": "Fourteen to Twentyone Days",
+    "mother.postpartum_visits__arround_fourtytwo_days": "Arround Fourtytwo Days",
+    "mother.registration_no_in_bi_register": "No in BI Register",
+    "mother.registration_date_in_bi_register": "Date in BI Register",
+    "mother.remarks": "Remarks",
+
   "baby.baby_id": "Baby ID" ,
   "baby.name_of_child": "Baby Name", 
   "baby.date_of_birth_of_child":"Date Of Birth",
