--- a/Frontend/src/assets/i18n/sn.json
+++ b/Frontend/src/assets/i18n/sn.json
@@ -5,7 +5,7 @@
   "clinic.enter_clinic_data":"සායන දත්ත ඇතුළත් කරන්න",
   "family.view_approved_families_of_the_area":"යෝග්‍යතා පවුල් බලන්න",
 
-    "family.village_id": "යෝග්‍යතා පවුල් කාණ්ඩය",
+    "family.village_id": "ග්‍රාම අංකය",
     "family.Approved_family_category": "යෝග්‍යතා පවුල් කාණ්ඩය",
     "family.Identity_number": "හැඳින්වීමේ අංකය",
     "family.Date": "දිනය",
@@ -43,6 +43,55 @@
     "family.Otherdetails": "වෙනත් කරුණු ",
     "family.numberofyoungchildren": "නව යොවුන් දරුවන් අවු 10-19 අතර",
 
+    "mother.mother_id": "මවගේ හැඳුනුම්පත් අංකය",
+    "mother.registration_no": "ලි. ප. අංකය",
+    "mother.registration_date": "ලියාපදිංචි දිනය ",
+    "mother.mothers_name": "ගර්භණී මවගේ නම",
+    "mother.personal_details": "පෞද්ගලික",
+    "mother.address": "ලිපිනය",
+    "mother.age": "වයස ",
+    "mother.no_of_living_children": "ජීවත්ව සිටින ළමුන් ගණන",
+    "mother.gravidity": "කීවෙනි ගර්භයද",
+    "mother.POA": "ගර්භ සති ගණන",
+    "mother.EDD": "බලාපොරොත්තු වන ප්‍රසව දිනය ",
+    "mother.protection_against_tetanus": "පිටගැස්ම ධූලකාභයෙන් ආරක්ෂාව",
+    "mother.protection_against_rubella": "",
+    "mother.risk_conditions": "අවදානම් තත්ව", 
+    "mother.blood_sugar" : "රුධිර සීනි මට්ටම",
+    "mother.blood_sugar__during_first_twelve_weeks": "<12 සති",
+    "mother.blood_sugar__twentyfour_fourtyeight_weeks": "24-28 සති",
+    "mother.hemoglobin_level": "හිමග්ලොබින් මට්ටම",
+    "mother.hemoglobin_level__first_twelve_weeks": " <12 සති",
+    "mother.hemoglobin_level__twentysix_twentyeight_weeks": "26-28 සති",
+    "mother.blood_group": "රුධිර ගණය",
+    "mother.vdrl_test": "VDRL පරීක්ෂාව",
+    "mother.vdrl_test__before_twelve_weeks": "සති 12ට පෙර",
+    "mother.vdrl_test__after_twelve_weeks": "සති 12ට පසු ",
+    "mother.hiv_screening": "HIV පූර්ව පරීක්ෂාව",
+    "mother.mothers_weight": "මවගේ බර",
+    "mother.mothers_weight__weight_at_first_visit": "  පළමු පැමිණි දින බර",
+    "mother.mothers_weight__poa_at_first_visit": "පළමු පැමිණි දින ගර්භ සති ගණන",
+    "mother.mothers_weight__weight_at_last_visit": "අවසන් පැමිණි දින බර",
+    "mother.mothers_weight__poa_at_last_visit": "අවසන් පැමිණි දින ගර්භ සති ගණන",
+    "mother.mothers_weight__gained_weight_during_pregnancy": "ගර්භණී සමයේ බර වැඩිවීම",
+    "mother.bmi_before_twelve_weeks": "ශරීර ස්කන්ධ දර්ශකය (සති 12ට පෙර)",
+    "mother.delivery_informations": "ප්‍රසූත විස්තර",
+    "mother.delivery_informations__date": "දිනය",
+    "mother.delivery_informations__place": "ස්තානය",
+    "mother.delivery_informations__outcome": "ප්‍රතිඵලය",
+    "mother.delivery_informations__sex": "ස්ත්‍රී/පුරුෂ",
+    "mother.mode_of_delivery": "ප්‍රසූතිය සිදුවූ ආකාරය ",
+    "mother.birth_weight": "උපත් බර",
+    "mother.postpartum_visits": "පසු ප්‍රසව ගෘහ පිවිසුම",
+    "mother.postpartum_visits__within_first_five_days": "මුල් දින 5 තුල",
+    "mother.postpartum_visits__six_to_ten_days": "දින 6-10",
+    "mother.postpartum_visits__late_first_visit_eleven_thirteen_days": "ප්‍රමාද වී ගිය අලුත් පසු ගමන් (දින 11-13)",
+    "mother.postpartum_visits__fourteen_twentyone_days": "දින 14-21",
+    "mother.postpartum_visits__arround_fourtytwo_days": "දින 42 ආසන්නයේ ",
+    "mother.registration_no_in_bi_register": "උපත් ලේඛනයේ අංකය ",
+    "mother.registration_date_in_bi_register": "උපත් ලේඛනයේ ලි.ප කල දිනය ",
+    "mother.remarks": "වෙනත් කරුණු",
+    
     "baby.baby_id": "දරුවාගේ අoකය" ,
     "baby.name_of_child": "දරුවාගේ නම", 
     "baby.date_of_birth_of_child":"උපන් දිනය",
