mother baby joined sinhala and english

--- a/Frontend/src/assets/i18n/en.json
+++ b/Frontend/src/assets/i18n/en.json
@@ -92,6 +92,52 @@
     "mother.registration_date_in_bi_register": "Date in BI Register",
     "mother.remarks": "Remarks",
 
+    "motherBabyJoined.mother_id": "Mother's ID",
+    "motherBabyJoined.baby_id":"Child's ID",
+    "motherBabyJoined.registration_details": "Registration Details",
+    "motherBabyJoined.child_name": "Child's Name",
+    "motherBabyJoined.mothers_name": "Mother's Name",
+    "motherBabyJoined.address": "Address",
+    "motherBabyJoined.sex": "Gender",
+    "motherBabyJoined.date_of_birth": "Date of Birth",
+    "motherBabyJoined.birth_weight": "Birth weight",
+    "motherBabyJoined.registration_date": "Registration Date",
+    "motherBabyJoined.registration_category": "Registration Category",
+    "motherBabyJoined.immunization__Details": "Immunization Details",
+    "motherBabyJoined.immunization__BGC": "BCG",
+    "motherBabyJoined.immunization__scar": "Scar", 
+    "motherBabyJoined.immunization__pentavalent" : "Pentavalent",
+    "motherBabyJoined.immunization__pentavalent__first": "First",  
+    "motherBabyJoined.immunization__pentavalent__second": "Second",  
+    "motherBabyJoined.immunization__pentavalent__third": "Third", 
+    "motherBabyJoined.immunization__polio__opv__fipv": "Polio OPV/FIPV",
+    "motherBabyJoined.immunization__polio__opv__first": "First",  
+    "motherBabyJoined.immunization__polio__opv__second": "Second",  
+    "motherBabyJoined.immunization__polio__opv__third": "Third", 
+    "motherBabyJoined.immunization__polio__fipv__two_m":" FIPV 2m",  
+    "motherBabyJoined.immunization__polio__fipv__foru_m": "FIPV 4m",
+    "motherBabyJoined.other__vaccines": "Other Vaccines",
+    "motherBabyJoined.immunization__japanese_encephalitis": "Japanese Encephalitis",  
+    "motherBabyJoined.immunization__measles_mumps_rubella_mmr_1": "Measles/mumps/rubella/mmr 1",  
+    "motherBabyJoined.immunization__diptheria_pertusis_tetanus_4": "Diptheria/pertusis/tetanus 4",  
+    "motherBabyJoined.immunization__polio_4":"Polio 4",  
+    "motherBabyJoined.immunization__measles_mumps_rubella_mmr_2": "Measles/mumps/rubella/mmr 2",  
+    "motherBabyJoined.immunization__diptheria_tetanus_5": "Diptheria/pertusis/tetanus 5",  
+    "motherBabyJoined.immunization__diptheria_tetanus_6": "Diptheria/pertusis/tetanus 6",  
+    "motherBabyJoined.vitamin_a_mega_dose": "Vitamin A Megadose",
+    "motherBabyJoined.vitamin_a_mega_dose__postnatal_mothers": "Postnatal Mothers",
+    "motherBabyJoined.vitamin_a_mega_dose__at_sixth_month": "At Sixth Month",
+    "motherBabyJoined.vitamin_a_mega_dose__at_first_year": "At First Year",
+    "motherBabyJoined.vitamin_a_mega_dose__at_one_and_half_yr": "At Year 1 1/2",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_two": "At Year 2",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_two _and_half": "At Year 2 1/2",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_three": "At Year 3",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_four": "At Year 4",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_four_and_half": "At Year 4 1/2",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_nine": "At Year 9",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_twelve": "At Year 12",
+    "motherBabyJoined.remarks": "Remarks",
+
   "baby.baby_id": "Baby ID" ,
   "baby.name_of_child": "Baby Name", 
   "baby.date_of_birth_of_child":"Date Of Birth",
