--- a/Frontend/src/assets/i18n/sn.json
+++ b/Frontend/src/assets/i18n/sn.json
@@ -91,6 +91,52 @@
     "mother.registration_no_in_bi_register": "උපත් ලේඛනයේ අංකය ",
     "mother.registration_date_in_bi_register": "උපත් ලේඛනයේ ලි.ප කල දිනය ",
     "mother.remarks": "වෙනත් කරුණු",
+
+    "motherBabyJoined.mother_id": "මවගේ අංකය",
+    "motherBabyJoined.baby_id":"දරුවාගේ අංකය",
+    "motherBabyJoined.registration_details": "ලියාපදිංචි තොරතුරු",
+    "motherBabyJoined.child_name": "ළමයාගේ නම",
+    "motherBabyJoined.mothers_name": "මවගේ නම",
+    "motherBabyJoined.address": "ලිපිනය",
+    "motherBabyJoined.sex": "ස්ත්‍රී/පුරුෂ",
+    "motherBabyJoined.date_of_birth": "උපන් දිනය",
+    "motherBabyJoined.birth_weight": "උපන් බර",
+    "motherBabyJoined.registration_date": "ලියාපදිංචි කල දිනය ",
+    "motherBabyJoined.registration_category": "ලියාපදිංචි කල කාණ්ඩය",
+    "motherBabyJoined.immunization__Details": "ප්‍රතිශක්තිකරණ එන්නත තොරතුරු",
+    "motherBabyJoined.immunization__BGC": "බීසීජී",
+    "motherBabyJoined.immunization__scar": "කැලල", 
+    "motherBabyJoined.immunization__pentavalent" : "ගලපටලය/කක්කල් කැස්ස/පිටගැස්ම/හෙපටයිටිස් බී/හිබ් (පංචසංයුජ)",
+    "motherBabyJoined.immunization__pentavalent__first": "පළමු",  
+    "motherBabyJoined.immunization__pentavalent__second": "දෙවන",  
+    "motherBabyJoined.immunization__pentavalent__third": "තෙවන", 
+    "motherBabyJoined.immunization__polio__opv__fipv": "පෝලියෝ OPV/FIPV",
+    "motherBabyJoined.immunization__polio__opv__first": "පළමු",  
+    "motherBabyJoined.immunization__polio__opv__second": "දෙවන",  
+    "motherBabyJoined.immunization__polio__opv__third": "තෙවන", 
+    "motherBabyJoined.immunization__polio__fipv__two_m":" FIPV 2m",  
+    "motherBabyJoined.immunization__polio__fipv__foru_m": "FIPV 4m",
+    "motherBabyJoined.other__vaccines": "වෙනත් එන්නත් තොරතුරු",
+    "motherBabyJoined.immunization__japanese_encephalitis": "ජැපනීස් එන්සෙපලයිටීස්",  
+    "motherBabyJoined.immunization__measles_mumps_rubella_mmr_1": "සරම්ප/කම්මුල්ගාය/රුබෙල්ලා 1",  
+    "motherBabyJoined.immunization__diptheria_pertusis_tetanus_4": "ගලපටලය/කක්කල් කැස්ස / පිටගැස්ම 4",  
+    "motherBabyJoined.immunization__polio_4":"පෝලියෝ 4",  
+    "motherBabyJoined.immunization__measles_mumps_rubella_mmr_2": "සරම්ප/කම්මුල්ගාය/රුබෙල්ලා 2",  
+    "motherBabyJoined.immunization__diptheria_tetanus_5": "ගලපටලය/කක්කල් කැස්ස / පිටගැස්ම 5",  
+    "motherBabyJoined.immunization__diptheria_tetanus_6": "ගලපටලය/කක්කල් කැස්ස / පිටගැස්ම 6",  
+    "motherBabyJoined.vitamin_a_mega_dose": "විටමින් A අධි මාත්‍රාව",
+    "motherBabyJoined.vitamin_a_mega_dose__postnatal_mothers": "පසු ප්‍රසව මව",
+    "motherBabyJoined.vitamin_a_mega_dose__at_sixth_month": "මාස 6දී",
+    "motherBabyJoined.vitamin_a_mega_dose__at_first_year": "අවුරුදු 1 දී",
+    "motherBabyJoined.vitamin_a_mega_dose__at_one_and_half_yr": "අවුරුදු 1 1/2 දී",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_two": "අවුරුදු 2 දී",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_two _and_half": "අවුරුදු 2 1/2 දී",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_three": "අවුරුදු 3 දී",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_four": "අවුරුදු 4 දී",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_four_and_half": "අවුරුදු 4 1/2 දී",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_nine": "අවුරුදු 9 දී",
+    "motherBabyJoined.vitamin_a_mega_dose__at_year_twelve": "අවුරුදු 12 දී",
+    "motherBabyJoined.remarks": "වෙනත් කරුණු",
     
     "baby.baby_id": "දරුවාගේ අoකය" ,
     "baby.name_of_child": "දරුවාගේ නම", 
