motherfor doc sinahala

--- a/Frontend/src/assets/i18n/en.json
+++ b/Frontend/src/assets/i18n/en.json
@@ -1,3 +1,5 @@
+
+
 {
   "clinic.view_clinic_records": "View Clinic Records",
   "clinic.upcoming_clinics": "Upcoming Clinics",
@@ -43,6 +45,7 @@
   "family.Otherdetails": "Other details",
   "family.numberofyoungchildren": "Number of young children",
 
+  "baby.Update_Baby" : "Update Baby Book",
   "baby.baby_id": "Baby ID" ,
   "baby.name_of_child": "Baby Name", 
   "baby.date_of_birth_of_child":"Date Of Birth",
@@ -274,5 +277,179 @@
   "baby.For_Hospital" : "For Hospital Admits",
   "baby.Reason_For_Admit" : "Reason For Admit",
   "baby.About_Diseases" :  "About Diseases ",
-  "baby.Refferals" : "Refferals" 
+  "baby.Refferals" : "Refferals" ,
+
+    
+
+    "pregm.pregnancy_form": "Prgnancy Form For Doctor",
+    "pregm.maiden":"Maiden ",
+    "pregm.risk":"Risked", 
+    "pregm.identified_maternal_risks_diseases":"Identified Maternal Risks Diseases",
+    "pregm.mother_id": "Mother ID",
+    "pregm.mothers_name": "Mother Name",
+    "pregm.mothers_age": "Mother Age",
+    "pregm.husband_name": "Husband Name",
+    "pregm.husband_age": "Husband Age",
+    "pregm.mothers_education_level": "Mother's Education Level",
+    "pregm.husbands_education_level": "Husband's Education Level",
+    "pregm.mothers_occupation": "Mother's Occupation",
+    "pregm.fathers_occupation": "Husband's Occupation",
+    "pregm.blood_group": "Blood Group",
+    "pregm.registration_number": "Registration Number",
+    "pregm.registration_date": "Registration Date",
+    "pregm.registered_place": "Registration Place",
+    "pregm.registered_date_according_to_the_approved_family_document": "Registration Date According To The Approved Family Document",
+    "pregm.grama_niladari_division": "Grama Niladari Division",
+    "pregm.phm_devision": "PHM Division",
+    "pregm.phi_devision": "PHI Division",
+    "pregm.address": "Address",
+    "pregm.telephone": "Telephone No",
+    "pregm.distance_to_mothers_workplace(km)": "Distance To Mother Workplace(km)",
+    "pregm.mothers_age_at_marriage": "Mother's Age At Marriage",
+    "pregm.blood_relatives_marriage": "Is A Blood Relatives Marriage? ",
+    "pregm.injected_for_rubella": "Is Injected For Rubella ?",
+    "pregm.done_pre_pregnancy_test": "Done Pre Pregnancy Test ?",
+    "pregm.is_forlic_acid_given": "Does Forlic Acid Given ?",
+    "pregm.history_of_madasarubawaya": "Have History Of Madasarubawa ?",
+    "pregm.yes":"Yes",
+    "pregm.no":" No",
+    "pregm.Pregnancy_History":"Pregnancy History",
+    "pregm.which_pregnancy": "Which Pregnancy",
+    "pregm.no_of_living_children": "Number Of Living Children",
+    "pregm.age_of_the_youngest_child": "Age Of Youngest Child",
+    "pregm.months": "මාස",
+    "pregm.from": "සිට",
+    "pregm.to": "දක්වා",
+    "pregm.last_menstrual_date": "Last Menstrual Date ",
+   	"pregm.expected_dilivery_date": "Expected Dilivery Date ",
+  	"pregm.expected_dilivery_date_corrected_by_US":"Expected Dilivery Date By US",
+	  "pregm.expecting_time_period_from": "Expected Time Period",
+    "pregm.weeks_into_pregnancy_when_registration": "Weeks Into Pregnancy When Registration",
+    "pregm.have_used_any_family_organization_method": "Have Used Any Family Organization Method And What Is It?",
+    "pregm.current_pregnancy_details": "Current Pregnancy Status",
+    "pregm.between_20t025_ages": "Less than 20 Years Old Or More than 35 Years Old",
+    "pregm.yesORno": "ඔව් /නැත",
+    "pregm.details": "විස්තර",
+    "pregm.fifth_pregnanycy_or above_fifth": "Fifth Pregnancy Or More Than",
+    "pregm.uterine_diseaces_or_high_blood_sugar": "Uterine Diseases Or High Blood Sugar Details",
+    "pregm.prenatal_vaginal_bleeding": "Prenatal Vaginal Bleeding",
+    "pregm.abnormal_positioning": "Abnormal Positioning",
+    "pregm.not_knowing_the_exact_delivery_date": "Not Knowing The Exact Delivery Date",
+    "pregm.other": "Others",
+    "pregm.other_risky_situations": "Other Risky Status",
+    "pregm.bmi_below20_or_above25": "Less than 20 BMI Value Or More than 25 BMI Value",
+    "pregm.diabetes": "Diabetes",
+    "pregm.malaria": "Malaria",
+    "pregm.heart_problems": "Heart Problems",
+    "pregm.other_details": "Other Details",
+    "pregm.Previous_pregnancy_details": "Previous Pregnancy History",
+    "pregm.pregnancy":"Pregnancy ",
+    "pregm.result": "Results",
+    "pregm.delivery_details": "Delivery Details",
+    "pregm.delivered_place": "Delivery Place",
+    "pregm.bron_weight": "Born Weight",
+    "pregm.delivery_abnormalities": "Delivery Abnormalities",
+    "pregm.sexe": "Sex and Age",
+    "pregm.family_diseases_details": "Family Diseases History",
+    "pregm.high_blood_preasre": "High Blood Preasure",
+    "pregm.blood_diseases": "Blood Diseases",
+    "pregm.early_obstetric_details": "Date Of Clinic",
+    "pregm.pregnancy_weeks": "Weeks Into Pregnancy",
+    "pregm.urine_sugar": "Urine Sugar",
+    "pregm.urin": "නිරක්තිය",
+    "pregm.natritional_needs_myths": "Natritional Needs Myths",
+    "pregm.embryo_height": "Embryo Height",
+    "pregm.embryo_moves": "Embryo Moves",
+    "pregm.embryo_sounds": "Embryo Sounds",
+    "pregm.temporiry_left_the_province": " Does Temporiry Left The Province?",
+    "pregm.from_letter":"Does It Informed From A Letter?",
+    "pregm.informed_delivery_time": "Is It Informed Delivery Time ?",
+    "pregm.is_it_informed" : "If Have A Risk Does Informed About That ?",
+    "pregm.delivery": "At Delivery ", 
+    "pregm.transport_method": "Transport Method ",
+    "pregm.emergency": "At Emergency",
+	  "pregm.hospital": "Hospital For Admits",
+    "pregm.clinical_details": "සායනික සoරක්ෂණය",
+    "pregm.First_Four":"First Four Clinics",
+    "pregm.second_Four" : "Second Four Clinics",
+    "pregm.clinics_day": "Date Of Clinic",
+    "pregm.weeks_into_pregnancy": "Weeks Into Pregnancy",
+    "pregm.weight": "Weight",
+    "pregm.urine": "Urine",
+    "pregm.sugar": "Sugar",
+    "pregm.hemoglobin": "Hemoglobin",
+    "pregm.blood_pressure": "Blood Pressure",
+    "pregm.position": "Position",
+    "pregm.iron_folate": "Iron Folate",
+    "pregm.vitamin_c": "Vitamine C",
+    "pregm.calsium_malaria_treatments": "Calcium Malaria Treatment",
+    "pregm.threeposha": "Thriposha",
+    "pregm.checked_by": "Checked By",
+    "pregm.Other_Medical":"Other Medical Details ",
+    "pregm.date_of_issued_embry_moves_form":"Date Of Issued Embryo Moves Form",
+    "pregm.worm_treatment_given_date": "Worm Treatment Given Date",
+    "pregm.tetanus_treatments": "පිටගැස්ම ධූලකාභය",
+    "pregm.type": "Tetanus Treatment Type",
+    "pregm.given_date": "Tetanus Treatment Given Date",
+    "pregm.type_number": "Tetanus Treatment Type Number",
+    "pregm.height": "Height From cm",
+    "pregm.bmi": "BMI Value",
+    "pregm.vdrl": "VDRL",
+    "pregm.blood_sample_obtained_date": "Blood Sample Obtained Date",
+    "pregm.weeks_into_pregnancy_when_blood_sample_was_obtained": "Weeks Into Pregnancy When Getting Blood Sample",
+    "pregm.date_of_results": "Results Date",
+    "pregm.date_of_referral_for_further_treatments": "Date Of Refferal For Treatment",
+    "pregm.was_blood_sample_taken_fot_pretest_for_hiv": "Was Blood Sample Taken For Pretest For HIV",
+    "pregm.was_blood_sample_taken_fot_pretest_for_malria":"Was Blood Sample Taken For Pretest For Malaria",
+    "pregm.breast_test": "Breast Test",
+    "pregm.cardiac_examination": "Cardiac Test",
+    "pregm.first_three_month": "First Three Months",
+    "pregm.second_three_month": "Second Three Months",
+    "pregm.third_three_month": "Third Three Months",
+    "pregm.lungs": "Lungs",
+    "pregm.dental_test": "Dental Test",
+    "pregm.dental_caries": "Dental Caries",
+    "pregm.blood_sugar": "Blood Sugar",
+    "pregm.malarias" :"Blood Test For Malaria",
+    "pregm.weeks":"ගර්භ සති ගණන" ,
+    "pregm.after_delivery_details": "Identified After Delivery Problems",
+    "pregm.vitamin_c_overdose": "Vitamine C Overdose Date",
+    "pregm.rubella": "Rubella Batch No",
+    "pregm.day_mother_came_home": "Date Of Mother Come Home",
+    "pregm.child": "Child",
+    "pregm.sexx": "Sex",
+    "pregm.birth_weight": "Birth Weight",
+    "pregm.immatured": "Immatured",
+    "pregm.abnormalities_birth": "Abnormalities At Birth",
+    "pregm.maternal_deaths": "Maternal Death",
+    "pregm.date": "Date",
+    "pregm.reason": "Maternal Death Reason",
+    "pregm.inversigated": "Does It Investigated?",
+    "pregm.First_Four_Post" :"First Four Post Travel Days",
+    "pregm.second_four_post":"Second Four Post Travel Days",
+    "pregm.mother": "Mother",
+    "pregm.temperature": "Temperature",
+    "pregm.paleness": "Paleness",
+    "pregm.breast": "Breast",
+    "pregm.filamemtous_blood": "Filamemtous Blood",
+    "pregm.mental_changes": "Mental Changes",
+    "pregm.diarrrhea": "Diarrrhea",
+    "pregm.vomiting": "Vomiting",
+    "pregm.breathing_difficulties": "Breathing Difficulties",
+    "pregm.visual_difficulties": "Visual Difficulties",
+    "pregm.pain_in_kent": "Pain In Kent",
+    "pregm.abnormalities": "Abnormalities",
+    "pregm.fever": "Fever",
+    "pregm.skin_color": "Skin Color",
+    "pregm.infections_near_umbilicus": "Infections Near Umbilicus",
+    "pregm.suckling": "Suckling",
+    "pregm.prebiotics": "Prebiotics",
+    "pregm.mental_health_according_to_edingburo": "Mental Health According To Edingburo",
+    "pregm.new_born_baby": "New Born Baby",
+    "pregm.bcg": "B.C.G",
+    "pregm.if_died": "New Born Child Death",
+    "pregm.does_mother_comes_to_post_delivery_clinics": "Does Mother Come To Post Delivery Clinics?",
+    "pregm.accepted_family_organization_method": "Does Accepted A Family Planning Method?",
+    "pregm.if_no":"If No Why?"
+        
 }
