translate to sinhala

--- a/Frontend/src/assets/i18n/en.json
+++ b/Frontend/src/assets/i18n/en.json
@@ -15,6 +15,9 @@
   "family.fill": "Add approved families",
   "family.familyDetails": "Family Details",
   "family.pregnancyDetails": "Pregnancy Details",
+  "family.changeAsMother": "Change as Mother",
+  "family.generateReports": "Generate Reports",
+  "family.add": "Add a New Family",
   "family.familyPlaningMethods": "Family planing methods",
   "family.Other": "Other Details",
   "family.village_id": "Village ID",
@@ -59,7 +62,9 @@
 
   "baby.Update_Baby" : "Update Baby Book",
 
-    "mother.mothers": "Mother's Details",
+    "mother.form": "Add a new mother",
+    "mother.mothers": "Mothers' Details",
+    "mother.mother": "Mother's Details",
     "mother.mother_id": "Mother's ID",
     "mother.registration_no": "Registration Number",
     "mother.registration_date": "Registration Date",
@@ -111,7 +116,9 @@
     "mother.registration_date_in_bi_register": "Date in BI Register",
     "mother.remarks": "Remarks",
 
+    "motherBabyJoined.book": "View Baby Book",
     "motherBabyJoined.fill": "Add baby details",
+    "motherBabyJoined.view_motherbaby": "Mother and Baby details",
     "motherBabyJoined.view_babies": "View Babies of the Area",
     "motherBabyJoined.mother_id": "Mother's ID",
     "motherBabyJoined.baby_id":"Child's ID",
@@ -215,7 +222,7 @@
   "baby.Low_Delivery": "Low Delivery" ,
   "baby.Vaccume_Delivery": " Vaccume Delivery",  
   "baby.Seasarian_Delivery": "Seasarian Delivery",
-  "baby.Number_of_apgas": "Number Of Apgas",
+  "Number_of_apgas": "Number Of Apgas",
   "baby.Number_of_apgas_1m": "1m",
   "baby.Number_of_apgas_5m": "5m",
   "baby.Number_of_apgas_10m": "10m",
