Mother update form in sinhala

--- a/Frontend/src/assets/i18n/en.json
+++ b/Frontend/src/assets/i18n/en.json
@@ -15,7 +15,7 @@
   "family.fill": "Add approved families",
   "family.familyDetails": "Family Details",
   "family.pregnancyDetails": "Pregnancy Details",
-  "family.changeAsMother": "Change as Mother",
+  "family.changeAsMother": "Change as a Mother",
   "family.generateReports": "Generate Reports",
   "family.add": "Add a New Family",
   "family.familyPlaningMethods": "Family planing methods",
@@ -65,6 +65,7 @@
     "mother.form": "Add a new mother",
     "mother.mothers": "Mothers' Details",
     "mother.mother": "Mother's Details",
+    "mother.changeAsMother": "Change as a Mother",
     "mother.mother_id": "Mother's ID",
     "mother.registration_no": "Registration Number",
     "mother.registration_date": "Registration Date",
@@ -81,6 +82,7 @@
     "mother.risk_conditions": "Risk Conditions", 
     "mother.risk_conditions_high": "High",
     "mother.risk_conditions_low": "Low",
+    "mother.blood_details" : "Blood Tests",
     "mother.blood_sugar" : "Blood Sugar Level",
     "mother.blood_sugar__during_first_twelve_weeks": "<12 weeks",
     "mother.blood_sugar__twentyfour_fourtyeight_weeks": "24-28 weeks",
