--- a/Frontend/src/assets/i18n/sn.json
+++ b/Frontend/src/assets/i18n/sn.json
@@ -65,7 +65,7 @@
     "mother.registration_no": "ලි. ප. අංකය",
     "mother.registration_date": "ලියාපදිංචි දිනය ",
     "mother.mothers_name": "ගර්භණී මවගේ නම",
-    "mother.personal_details": "පෞද්ගලික",
+    "mother.personal_details": "පෞද්ගලික තොරතුරු",
     "mother.address": "ලිපිනය",
     "mother.age": "වයස ",
     "mother.no_of_living_children": "ජීවත්ව සිටින ළමුන් ගණන",
@@ -77,6 +77,7 @@
     "mother.risk_conditions": "අවදානම් තත්ව", 
     "mother.risk_conditions_high": "වැඩි",
     "mother.risk_conditions_low": "අඩු",
+    "mother.blood_details" : "රුධිර පරීක්ෂණ තොරතුරු",
     "mother.blood_sugar" : "රුධිර සීනි මට්ටම",
     "mother.blood_sugar__during_first_twelve_weeks": "<12 සති",
     "mother.blood_sugar__twentyfour_fourtyeight_weeks": "24-28 සති",
