update baby form complete

--- a/Frontend/src/assets/i18n/en.json
+++ b/Frontend/src/assets/i18n/en.json
@@ -313,7 +313,7 @@
   "baby.four_half_year" : "4 1/2 Years",
   "baby.five_yea" : "5 Years",
   "baby.warm_treat": "Warm Treat",
-  "baby.Baby's_Eyes" : "To Check Baby's Eyes",
+  "baby.Baby_Eyes" : "To Check Baby's Eyes",
   "baby.First_Month_From_Birth" : "First Month From Birth",
   "baby.Second_Month_From_Birth" : "Second Month From Birth",
   "baby.four_Month_From_Birth" : "From Four Months",
@@ -432,7 +432,7 @@
   "baby.Doctors_Notes":  "For Doctors",
  "baby.date_of_checked" : "Date",
  "baby.special_notice": "Special Notice" ,
-  "baby.Check_Baby's_Teeth" :  "For Mothers To Check Baby's Teeth",
+  "baby.Check_Baby_Teeth" :  "For Mothers To Check Baby's Teeth",
   "baby.Age_Of_Child" :  "Age Of Child" ,
   "baby.No_Of_Teeth" : "No Of Teeth",
   "baby.Status_Good" : "Status Good",
