--- a/Frontend/src/assets/i18n/sn.json
+++ b/Frontend/src/assets/i18n/sn.json
@@ -292,7 +292,7 @@
     "baby.d_t ": "ද්විත්ව (D.T.)",
    "baby.opv_five ":  "පෝලියෝ 5 (OPV 5)",
    "baby.adult_tatanus_diphtheria": "වැඩිහිටි පිටගැස්ම හා ඩිප්තීරියා (Adult Tatanus and Deptheria)",
-   "baby.Refferals_Of_I ":  "ප්‍රතිශක්තිකරණය සම්බන්ධ යොමු කිරීම්",
+   "baby.Refferals_Of_I":  "ප්‍රතිශක්තිකරණය සම්බන්ධ යොමු කිරීම්",
    "baby.reason_for_referrals":  "යොමු කිරීමට හේතුව",
    "baby.place_of_refferal" :  "යොමු කළ ස්‌ථානය" ,
    "baby.notes_on_back": "ආපසු යොමු කිරීම් / පසු විපරම්වල ප්‍රතිපල",
@@ -359,7 +359,7 @@
    "baby.they_play_when_crossing_fingers" : "ඇගිලි එකිනෙක පටලවා ගනිමින් තම අත් සමග සෙල්ලම් කරයි",
    "baby.streching_his_hands_toward_something_he_hold_it_with_his_whole_hand" : "යම් ද්‍රවය දෙසට ඇත දිගු කර මුළු අත්ලෙන්ම අල්ලා ගනියි",
    "baby.when_heard_a_sound_he_turn_his_head_toward" : "ශබ්දයක් ඇසුණු විට ඒ දෙසට හිස හරවයි",
-   "baby.emits_single_letter_sounds ": "තනි අකුරේ ශබ්ද පිට කරයි ගා-- ඩා -- ටා-- බා--",
+   "baby.emits_single_letter_sounds": "තනි අකුරේ ශබ්ද පිට කරයි ගා-- ඩා -- ටා-- බා--",
    "baby.smiles_loudely" : "ශබ්ද නගා සිනාසෙයි",
    "baby.lie_your_hips_and_head_up" : "උඩු අතට වැතිර සිටින විට හිස ඔසවයි",
    "baby.turn_back_again_and_again" : "උඩු අතට සිට මුනින් අතටත් මුනින් අතට සිට උඩ අතටත් හැරෙයි",
@@ -436,6 +436,8 @@
     "baby.Reason_For_Admit" : "රෝහල් ගත වීමට හේතුව",
     "baby.About_Diseases" :  "රෝග විනිශ්චය ",
     "baby.Refferals" : "ආපසු යොමු කිරීම් / පසු විපරම්" ,
+    "baby.hip_joint" : "උකුල් සන්ධිය", 
+    "baby.Update_Baby" :"ළදරු සටහන් පොත" ,
 
     "pregm.pregnancy_form": "ගර්භනී සටහන් පත",
     "pregm.maiden":"කුළුදුල්",
@@ -444,8 +446,8 @@
     "pregm.mother_id": "මවගේ අංකය",
     "pregm.mothers_name": "ගර්භණී මවගේ නම",
     "pregm.mothers_age": "වයස",
-    "pregm.husband_name": "පුරුෂයාගේ නම",
-    "pregm.husband_age": "වයස",
+    "pregm.husband_name": "ස්වාමිපුරුෂයාගේ නම",
+    "pregm.husband_age": "ස්වාමිපුරුෂයාගේ වයස",
     "pregm.mothers_education_level": "මවගේ අධ්‍යාපන මට්ටම",
     "pregm.husbands_education_level": "ස්වාමිපුරුෂයාගේ අධ්‍යාපන මට්ටම",
     "pregm.mothers_occupation": "මවගේ රැකියාව",
@@ -521,6 +523,7 @@
     "pregm.from_letter":"ඒ සම්බන්ධව ලිපියක් නිකුත් කරාද?",
     "pregm.informed_delivery_time": "බලාපොරොත්තු ප්‍රසව කාලය පිළිබද දැනුවත් කලේද?",
     "pregm.is_it_informed" : "අවදානම් තත්ත්ව ඇත්නම් ඒ පිළිවදව ඥාතින දැනුවත් කලේද?",
+    "pregm.Ready_For" :"ප්‍රසුතියේදී/හදිසි අවස්ථාවකදී",
     "pregm.delivery": "ප්‍රසුතියේදී", 
     "pregm.transport_method": "ප්‍රවාහන ආකාරය",
     "pregm.emergency": "හදිසි අවස්ථාවකදී",
@@ -544,10 +547,9 @@
     "pregm.Other_Medical":"වෙනත් වෛදය තොරතුරු",
     "pregm.date_of_issued_embry_moves_form":"භ්රූණ චලන පිටපත් ලබා දුන් දිනය",
     "pregm.worm_treatment_given_date": "පණු ප්‍රතිකාර ලබා දුන් දිනය",
-    "pregm.tetanus_treatments": "පිටගැස්ම ධූලකාභය",
-    "pregm.type": "වර්ගය",
-    "pregm.given_date": "ලබා දුන් දිනය",
-    "pregm.type_number": "එන්නත් කාණ්ඩ අංකය",
+    "pregm.tetanus_treatments_type": "පිටගැස්ම ධූලකාභය වර්ගය",
+    "pregm.tetanus_treatments_given_date": "පිටගැස්ම ධූලකාභය ලබා දුන් දිනය",
+    "pregm.tetanus_treatments_type_number": "පිටගැස්ම ධූලකාභය එන්නත් කාණ්ඩ අංකය",
     "pregm.height": "උස/සෙ.මී",
     "pregm.bmi": "ශරීර ස්කන්ධ දර්ශකය",
     "pregm.vdrl": "ස.රෝ.ලේ.ප",
@@ -570,14 +572,15 @@
     "pregm.weeks":"ගර්භ සති ගණන" ,
     "pregm.after_delivery_details": "පසු ප්‍රසව සංරක්ෂණය",
     "pregm.vitamin_c_overdose": "විටමින් C අධි මාත්‍රාව",
-    "pregm.rubella": "රුබෙල්ලා",
+    "pregm.rubella_date": "රුබෙල්ලා දිනය",
+    "pregm.rubella.batch" :"රුබෙල්ලා කාණ්ඩ අoකය",
     "pregm.day_mother_came_home": "මව නිවසට පැමිණි දිනය",
     "pregm.child": "ළදරුවා",
     "pregm.sexx": "ලිංගය",
     "pregm.birth_weight": "උපත් බර",
     "pregm.immatured": "නොමෙරූ",
     "pregm.abnormalities_birth": "උපතේදී සිදුවූ සංකූලතා",
-    "pregm.maternal_deaths": "වෙනත් කරුණු",
+    "pregm.maternal_deaths": "මව් මරණ",
     "pregm.date": "දිනය",
     "pregm.reason": "හේතුව",
     "pregm.inversigated": "විමර්ශනය කලේද?",
